Kubernetes/MatrixMultiplication/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-multiply-ingress
  annotations:
    # This annotation tells NGINX to set the header with the current time in milliseconds
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header requestTime "t=$msec";
spec:
  rules:
  - http:
      paths:
      - path: /multiply
        pathType: Prefix
        backend:
          service:
            name: matrix-multiply-service
            port:
              number: 80
      - path: /sqrt
        pathType: Prefix
        backend:
          service:
            name: sqrt-service
            port:
              number: 80
